<resources>
    <string name="app_name">StarterChapter05</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dips">Dips</string>
    <string name="pushups">Pushups</string>
    <string name="handstand">Handstand</string>
    <string name="dips_content">A dip is an upper-body strength exercise. Narrow, shoulder-width dips primarily train the triceps, with major synergists being the anterior deltoid, the pectoralis muscles, and the rhomboid muscles of the back.</string>
    <string name="pushup_content">A push-up is a common calisthenics exercise beginning from the prone position, or the front leaning rest position known in the military.</string>
    <string name="handstand_content">A handstand is the act of supporting the body in a stable, inverted vertical position by balancing on the hands. In a basic handstand the body is held straight with arms and legs fully extended, with hands spaced approximately shoulder-width apart and the legs together.</string>
    <string name="advanced">Advanced</string>
    <string name="comment">12</string>
    <string name="like">154</string>
    <string name="beginner">Beginner</string>
    <string name="medium">Medium</string>

</resources>
